added stock images

--- a/style/styles.css
+++ b/style/styles.css
@@ -5,7 +5,7 @@
 
 html {
     font-size: 16px;
-    font-family: sans-serif;
+    font-family:     'Indie Flower', cursive, sans-serif;
 }
 
 body {
@@ -24,6 +24,7 @@ body {
 
 .navbar ul {
     list-style-type: none;
+    justify-content: center;
     flex-direction: row;
     gap: 2rem;
 
@@ -31,13 +32,20 @@ body {
 
 .navbar a {
     text-decoration: none;
+    color: white;
 }
 
 /* INTRO */
 .intro {
-    background-image: url("https://cdn.pixabay.com/photo/2014/11/27/23/53/hedgehog-548335_960_720.jpg");
+    background-image: url("https://images.unsplash.com/photo-1611735341450-74d61e660ad2?q=80&w=1169&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-repeat: no-repeat;
     background-size: cover;
+
+    height: 30rem;
+}
+
+.intro-banner {
+    background-color: green;
 }
 
 /* SUMMARY */
