--- a/style/styles.css
+++ b/style/styles.css
@@ -5,11 +5,12 @@
 
 html {
     font-size: 16px;
-    font-family:     'Indie Flower', cursive, sans-serif;
+    font-family: sans-serif;
 }
 
 body {
     background-color: whitesmoke;
+    text-align: center;
 }
 
 .container {
@@ -18,8 +19,13 @@ body {
 
 /* NAVBAR */
 .navbar {
-    background-color: grey;
+    background-color: #754723;
+    padding: 2rem 0;
 
+}
+
+nav {
+    justify-content: space-evenly;
 }
 
 .navbar ul {
@@ -32,28 +38,111 @@ body {
 
 .navbar a {
     text-decoration: none;
-    color: white;
+    color: whitesmoke;
 }
 
 /* INTRO */
 .intro {
-    background-image: url("https://images.unsplash.com/photo-1611735341450-74d61e660ad2?q=80&w=1169&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://images.unsplash.com/photo-1591857177580-dc82b9ac4e1e?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-repeat: no-repeat;
     background-size: cover;
 
-    height: 30rem;
+    height: 50rem;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+
+    font-size: 2rem;
 }
 
 .intro-banner {
-    background-color: green;
+    background-color: grey;
+    width: 100%;
+    justify-content: center;
+    padding: 2rem 0;
 }
 
 /* SUMMARY */
+.summary {
+    background-color: #237563;
+    padding: 4rem 2rem;
+}
 
 /* TESTIMONIALS */
-
+.testimonials {
+    padding: 4rem 0;
+}
+.testimonials, .testimonials footer {
+    background-color: #754723;
+    text-align: center;
+}
 /* PHOTOS */
+.photos {
+    padding: 4rem 1rem;
+    flex-wrap: wrap;
+    flex-shrink: 2;
+}
+.photos img {
+    width: 30%;
+    height: 25rem;
+    margin: 1rem 0;
+    padding: 1rem;
+    /*border: 2px solid orange;*/
+}
+
+/* MOBILE PHOTOS */
+@media only screen and (max-width: 500px) {
+    .photos {
+        padding: 2rem 0.5rem;
+        flex-shrink: 1;
+    }
+    .photos img {
+        width: 100%;
+    }
+}
+
+/* TABLET PHOTOS */
+@media only screen and (max-width: 1024px) {
+    .photos {
+        flex-direction: row;
+        flex-shrink: 1;
+        width: 100%;
+        border: 2px solid orange;
+    }
+    .photos img {
+        display: flex;
+        width: 100%;
+        flex-shrink: 1;
+        border: 1px solid hotpink;
+    }
+}
 
 /* MEETUPS */
+.meetups {
+    padding: 4rem 0rem;
+    background-color: #237563;
+}
 
-/* FOOTER *?
+.meetups img {
+    /*border: 2px solid orange;*/
+    width: 50%;
+
+    margin: 1rem 0rem;
+}
+
+/* MOBILE MEETUPS */
+@media only screen and (max-width: 500px) {
+    .meetups img {
+        min-width: 100%;
+    }
+}
+
+
+/* FOOTER */
+footer {
+    background-color: #754723;
+    text-align: left;
+    /*padding-left: 0.5rem;*/
+    padding: 1rem 0 1rem 0.5rem;
+}
